# RType

./: .clang-format  .gitignore  .releaserc.yml  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  GameEngineInstruction.md  Makefile  POCEngine  POCProgram  README.md  RTYPE.cbp  build.bat  build.ninja  build.ps1  build.sh  clear.bat  clear.sh  client  cmake_install.cmake  dependencies.sh  format.sh  package-lock.json  package.json  rfc-rtype-ncp.md  test.txt  uml.sh
AudioEngine/: AudioEngine.hpp  AudioEngineSystem.cpp  AudioEngineSystem.hpp  CMakeLists.txt  Makefile  cmake_install.cmake
AudioEngine/AudioCompTypes/: AudioComponent.hpp
GameEngine/: AComponent.hpp  CMakeLists.txt  ComponentsType.hpp  Dummy.cpp  EventHandler.hpp  GameEngine.hpp  IComponent.hpp  ISystem.hpp  LayerType.hpp  Registry.hpp  SharedLibrary.hpp  Timer.hpp  cmake_install.cmake
GameEngine/AudioEngine/: AudioEngine.cpp  AudioEngine.hpp  CMakeLists.txt  Makefile
GameEngine/AudioEngine/AudioCompTypes/: AudioComponent.hpp
GameEngine/Components/: AComponent.hpp  ComponentsType.hpp
GameEngine/Core/: ComponentConainer.hpp  GameEngine.cpp  IComponent.hpp  ISystem.hpp  Registry.cpp  Registry.hpp
GameEngine/Event/: EventHandler.cpp  EventHandler.hpp
GameEngine/GameEngineSystems/: AudioEngineSystem.cpp  AudioEngineSystem.hpp  RenderEngineSystem.hpp  RenderEngingeSystem.cpp
GameEngine/RenderEngine/: CMakeLists.txt  RenderEngine.cpp  RenderEngine.hpp
GameEngine/RenderEngine/RenderCompTypes/: ParallaxComponent.hpp  SpriteComponent.hpp  TextComponent.hpp
lib/OpenAL/: CMakeLists.txt
lib/asio/: CMakeLists.txt
lib/dr_wav/: CMakeLists.txt
lib/luaJIT/: CMakeLists.txt
lib/raylib/: CMakeLists.txt  cmake_install.cmake
src/: CMakeLists.txt  Makefile  client.cpp  cmake_install.cmake  main.cpp  server.cpp
src/AssetsEditor/: index.css  index.html  main.js  package-lock.json  package.json  renderer.js
src/AudioEngine/: AudioEngine.cpp  AudioEngine.hpp  AudioEngineSystem.cpp  AudioEngineSystem.hpp  CMakeLists.txt  Makefile  cmake_install.cmake
src/AudioEngine/AudioCompTypes/: AudioComponent.hpp
src/Client/: MainProgram.cpp  MainProgram.hpp
src/Client/Component/: BossComponent.cpp  DeathAnimation.cpp  IsBackgroundConnect.cpp  IsBackgroundConnect.hpp  IsBoss.hpp  IsButtonConnect.cpp  IsButtonConnect.hpp  IsChargingBar.hpp  IsMenuPort.cpp  IsMob.cpp  IsParallax.cpp  IsPlayer.hpp  IsPowerUp.cpp  IsPowerUp.hpp  IsSelected.cpp  LoseNotifAnimation.hpp  MenuNavigation.hpp  MobComponents.cpp  PaddingMenu.hpp  Score.hpp  SmoothingMovement.cpp  SpriteAnimation.hpp  WinNotifAnimation.cpp  isHealthBar.cpp  isHealthBar.hpp  isPowerUpPickUp.cpp
src/Client/Factory/: CMakeLists.txt  CreateBoss.cpp  CreateBullet.cpp  CreateParallax.cpp  CreatePlayer.cpp  EntityFactory.cpp  MobSpawn.cpp  ScreenConnect.cpp
src/Client/System/: ActionButtonConnectClick.cpp  AnimateDeath.hpp  AnimateLoseNotification.cpp  AnimateOnMove.cpp  AnimateStartNotification.cpp  AnimateStartNotification.hpp  AnimateWinNotification.hpp  ButtonConnectAnimation.hpp  CMakeLists.txt  ChargingBar.cpp  ChargingBar.hpp  CollisionHandler.hpp  CreateParallax.cpp  CreateParallax.hpp  CreatePlayer.hpp  CreatePowerUp.hpp  CreatePowerUpDual.hpp  DeathPlayer.cpp  EndSmoothing.cpp  EndSmoothing.hpp  FlashWhenHit.cpp  ForcePodUpgrade.hpp  GameOverSystem.hpp  InitAudioBackgroud.cpp  InitAudioBackgroud.hpp  InitHUD.hpp  InitNotification.cpp  MobHit.cpp  (+23 more)
src/DevConsole/: CMakeLists.txt  main.cpp
src/Entities/: EntityFactory.hpp
src/ExternalConsole/: CMakeLists.txt  NamedPipeIPC.cpp  NamedPipeIPC.hpp  main.cpp
src/GameEngine/: CMakeLists.txt  ComponentsType.hpp  Dummy.cpp  Dummy.hpp  EventHandler.hpp  GameEngine.hpp  Makefile  cmake_install.cmake
src/Hunter/: CMakeLists.txt  main.cpp
src/LoadConfig/: CMakeLists.txt  ConfigData.cpp  ConfigData.hpp  LoadConfig.cpp  LoadConfig.hpp
src/LuaScriptingEngine/: CMakeLists.txt  LuaCinematicScriptingSystem.cpp  LuaCinematicScriptingSystem.hpp  LuaScriptingEngine.cpp  LuaScriptingEngine.hpp
src/MapCreator/: CMakeLists.txt  Cell.hpp  Editor.cpp  Editor.hpp  ElementInfo.hpp  ElementType.hpp  Sprite.hpp  map.cpp
src/MobPoc/: CMakeLists.txt  EntityComponents.hpp  EntityFactory.cpp  EntityFactory.hpp  EntitySystems.hpp  main.cpp
src/NetworkLib/: AMessage 2.hpp  AMessage.hpp  Body.cpp  Body.hpp  CMakeLists.txt  Client.cpp  Client.hpp  EndpointGetter.cpp  EndpointGetter.hpp  IMessage.hpp  InterfaceNetwork.cpp  InterfaceNetwork.hpp  Message.cpp  Message.hpp  Pack.hpp  PacketComponent.hpp  PacketIO.cpp  PacketIO.hpp  PacketRegister.cpp  PacketRegister.hpp  Server.cpp  Server.hpp  TSqueue.hpp  Tick.cpp  Tick.hpp
src/POCCinematic/: CMakeLists.txt  main.cpp
src/POCClient/: CMakeLists.txt  MainProgram.cpp  MainProgram.hpp  main.cpp
src/POCEngine/: CMakeLists.txt  EntityComponents.hpp  EntityFactory.cpp  EntityFactory.hpp  EntitySystems.hpp  POCEngine.cpp  cmake_install.cmake  main.cpp
src/POCLua/: CMakeLists.txt  main.cpp
src/POCProgram/: CMakeLists.txt  Makefile  POCProgram.sln  TestPOC.cpp  cmake_install.cmake
src/POCServer/: CMakeLists.txt  main.cpp
src/PhysicsEngine/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsEngineCollisionSystem.cpp  PhysicsEngineCollisionSystem.hpp  PhysicsEngineCollisionSystem2D.cpp  PhysicsEngineCollisionSystem2D.hpp  PhysicsEngineGravitySystem.cpp  PhysicsEngineGravitySystem.hpp  PhysicsEngineJumpSystem.cpp  PhysicsEngineJumpSystem.hpp  PhysicsEngineMovementSystem2D.cpp  PhysicsEngineMovementSystem2D.hpp  PhysicsEngineUpdateHitboxes.cpp  PhysicsEngineUpdateHitboxes.hpp
src/RenderEngine/: CMakeLists.txt  KeyMapping.hpp  Makefile  RenderEngine.cpp  RenderEngine.hpp  RenderEngineAnimationSystem.cpp  RenderEngineAnimationSystem.hpp  RenderEngineCinematicSystem.cpp  RenderEngineCinematicSystem.hpp  RenderEngineSystem.cpp  RenderEngineSystem.hpp  ToggleFullScreen.cpp  ToggleFullScreen.hpp  cmake_install.cmake
src/Server/: main.cpp
src/UtilsProject/: CMakeLists.txt  IPCInterface.hpp  Utils.hpp
(+873 files in other folders)
