cmake_minimum_required(VERSION 3.15)

project(RTYPE LANGUAGES CXX)

include(GNUInstallDirs)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build (Debug or Release)" FORCE)
endif()

set(PROJECT_NAME_CLIENT client)
set(PROJECT_NAME_SERVER server)
set(PROJECT_NAME_POCENGINE POCEngine)
set(PROJECT_NAME_POCPROGRAM POCProgram)
set(PROJECT_NAME_POCSERVER POCServer)
set(PROJECT_NAME_POCCLIENT POCClient)
set(LIBRARY_NAME_NETLIB NetworkLib)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(${PROJECT_NAME_CLIENT} )
add_executable(${PROJECT_NAME_SERVER} )
add_executable(${PROJECT_NAME_POCENGINE})
add_executable(${PROJECT_NAME_POCPROGRAM})
add_executable(${PROJECT_NAME_POCSERVER})
add_executable(${PROJECT_NAME_POCCLIENT})
add_library(${LIBRARY_NAME_NETLIB})

add_subdirectory(lib)
add_subdirectory(src)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)

file(COPY ${CMAKE_SOURCE_DIR}/assets DESTINATION .)
file(COPY ${CMAKE_SOURCE_DIR}/config DESTINATION .)

message(STATUS "Configured to compile the RType project.")

install(TARGETS ${PROJECT_NAME_CLIENT} ${PROJECT_NAME_SERVER} ${PROJECT_NAME_POCENGINE} ${PROJECT_NAME_POCPROGRAM} ${PROJECT_NAME_POCSERVER} ${PROJECT_NAME_POCCLIENT}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)


install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/assets" DESTINATION ${CMAKE_INSTALL_BINDIR})
install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/config" DESTINATION ${CMAKE_INSTALL_BINDIR})

include(InstallRequiredSystemLibraries)


message(STATUS "CPACK_PACKAGE_VERSION: ${CPACK_PACKAGE_VERSION}")

set(CPACK_PACKAGE_NAME "RTYPE")
set(CPACK_PACKAGE_VENDOR "T-H-C-A")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "RTYPE - Oui")
if(NOT DEFINED CPACK_PACKAGE_VERSION)
    set(CPACK_PACKAGE_VERSION "1.0.0")
endif()
set(CPACK_PACKAGE_INSTALL_DIRECTORY "RTYPE")
set(CPACK_PACKAGE_CONTACT "alexandre@email.com")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "${CPACK_PACKAGE_CONTACT}")

if(WIN32)
    set(CPACK_GENERATOR "NSIS")
elseif(APPLE)
    set(CPACK_GENERATOR "DragNDrop")
else()
    set(CPACK_GENERATOR "DEB;RPM")
endif()

include(CPack)
