add_subdirectory(GameEngine)
if(NOT WIN32)
    add_subdirectory(AudioEngine)
endif ()
add_subdirectory(RenderEngine)
add_subdirectory(PhysicsEngine)
add_subdirectory(UtilsProject)
add_subdirectory(POCEngine)
add_subdirectory(NetworkLib)
add_subdirectory(POCServer)
add_subdirectory(POCClient)
add_subdirectory(LoadConfig)
add_subdirectory(POCCinematic)
add_subdirectory(Hunter)
add_subdirectory(MapCreator)
add_subdirectory(DevConsole)
