add_subdirectory(GameEngine)
add_subdirectory(AudioEngine)
add_subdirectory(RenderEngine)
add_subdirectory(PhysicsEngine)
add_subdirectory(UtilsProject)
add_subdirectory(NetworkLib)
add_subdirectory(Server)
add_subdirectory(Client)
add_subdirectory(LoadConfig)
add_subdirectory(POCCinematic)
add_subdirectory(Hunter)
add_subdirectory(DevConsole)
