add_subdirectory(GameEngine)
if(NOT WIN32)
    add_subdirectory(AudioEngine)
endif ()
add_subdirectory(RenderEngine)
add_subdirectory(PhysicsEngine)
add_subdirectory(UtilsProject)
add_subdirectory(NetworkLib)
add_subdirectory(Server)
add_subdirectory(Client)
add_subdirectory(LoadConfig)
add_subdirectory(POCCinematic)
add_subdirectory(Hunter)
add_subdirectory(DevConsole)
