set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

target_sources(${PROJECT_NAME_POCCinematic} PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
        )

target_link_libraries(${PROJECT_NAME_POCCinematic} ${LIBRARY_NAME_GAMEENGINE} ${LIBRARY_NAME_RENDER} ${LIBRARY_NAME_AUDIO} PhysicsEngineLib ${LIBRARY_NAME_NETLIB} LoadConfigLib ${LIBRARY_NAME_UTILS})
